--- a/lessons/generic.html
+++ b/lessons/generic.html
@@ -15,20 +15,20 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo"><strong>Binary</strong> by TEMPLATED</a>
+				<a href="../index.html" class="logo"><strong>Binary</strong> by TEMPLATED</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
 			</header>
 
 		<!-- Nav -->
-			<nav id="menu">
+			<!-- <nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
+					<li><a href="../index.html">Home</a></li>
 					<li><a href="generic.html">Generic</a></li>
 					<li><a href="elements.html">Elements</a></li>
 				</ul>
-			</nav>
+			</nav> -->
 
 		<!-- Main -->
 			<section id="main">
