got rid of the menu icon... for now

--- a/lessons/generic.html
+++ b/lessons/generic.html
@@ -16,9 +16,9 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="../index.html" class="logo"><strong>Binary</strong> by TEMPLATED</a>
-				<nav>
+				<!-- <nav>
 					<a href="#menu">Menu</a>
-				</nav>
+				</nav> -->
 			</header>
 
 		<!-- Nav -->
