--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <!-- <img src="./images/logo.png" style="height: 70%; width:auto; margin-top: 20%" alt=""> </a> -->
           <a class="logo" >CS1502 <strong>Spatial Reasoning</strong>
         </a>
-				<nav>
+				<!-- <nav>
 					<a href="#menu">Menu</a>
-				</nav>
+				</nav> -->
 			</header>
 
 		<!-- Nav -->
