--- a/index.html
+++ b/index.html
@@ -39,10 +39,25 @@
 		<!-- Banner -->
 			<section id="banner"  style="background-color: #1c1c1c;">
 				<div class="inner">
-					<h1>CS 2501	Spatial Reasoning</a></h1>
+					<h1>CS 2501	Spatial Reasoning</h1>
 					<ul class="actions">
 						<li><a href="#current" class="button alt scrolly big">Most Recent Lesson</a></li>
 					</ul>
+
+				</div>
+			</section>
+      <section id="banner"  style="background-color: white;">
+				<div class="inner" >
+					<h1 style="color: black;">Course Overview</h1>
+          <p style="color: black; padding-left: 12.5%; padding-right: 12.5%; text-align: left;">
+            Spatial reasoning skills are strongly correlated with success in computer science, especially that the introductory levels. This is because, in many instances, professors use spatial reasoning terms and ideas while teaching computer science. Thus, many students, who didn’t develop these skills at a younger age, are at a disadvantage. We have designed this course in conjunction with Professor Tychonievich to help everyone improve their skills!
+          </p>
+          <h3 style="color: black;">Requirements</h3>
+          <p style="color: black; padding-left: 12.5%; padding-right: 12.5%; text-align: left;">
+            We have no formal prerequisites, however students who have not completed CS2150 may benefit the most from this course! No computer science skills or knowledge is required to have fun and do well in this class.
+          </p>
+
+
 				</div>
 			</section>
 
