added the syllabus

--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
 				<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 					<div class="inner">
 						<header>
-							<h2><a href="generic.html" style="color: white;">Syllabus</a></h2>
+							<h2><a href="./lessons/syllabus.html" style="color: white;">Syllabus</a></h2>
 							<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">August 29, 2018 <a href="#" style="color:#fff">Rohit and Isabel</a></p>
 						</header>
-						<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<p style="color: rgba(255, 255, 255, 0.75);">
+							This is the syllabus for the course. Details surrounding the course mechanics, as well as an outline of the general sequence of topics, are posted here.
+						</p>
 
 					</div>
 				</div>
