--- a/lessons/generic.html
+++ b/lessons/generic.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="../index.html" class="logo"><strong>Binary</strong> by TEMPLATED</a>
+				<a href="../index.html" class="logo"><strong>CS1501</strong> Spatial Reasoning</a>
 				<!-- <nav>
 					<a href="#menu">Menu</a>
 				</nav> -->
