--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/custom.css">
+		<link rel="icon" href="./assets/images/favicon.png" type="image/x-icon"/>
+
 
 
 	</head>
