fixed changes, ready for PR

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<title>Spatial Reasoning</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/custom.css">
-	<link rel="icon" href="images/icon.png"/>
+	<link rel="stylesheet" href="./assets/css/main.css" />
+	<link rel="stylesheet" href="./assets/css/custom.css">
+	<link rel="icon" href="./assets/images/icon.png"/>
 
 </head>
 
@@ -42,8 +42,8 @@
 			<h1>CS 1501	Spatial Reasoning</h1>
 			<ul class="actions">
 				<li><a href="lessons.html#current" class="button alt scrolly big">Most Recent Lesson</a></li>
-				<li><a href="syllabus.html" class="button alt scrolly big">Syllabus</a></li>
-				<li><a href="staff.html" class="button alt scrolly big">Teaching Staff</a></li>
+				<li><a href="./syllabus.html" class="button alt scrolly big">Syllabus</a></li>
+				<li><a href="./staff.html" class="button alt scrolly big">Teaching Staff</a></li>
 			</ul>
 
 		</div>
