--- a/staff.html
+++ b/staff.html
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/custom.css">
-	<link rel="icon" href="images/icon.png"/>
+	<link rel="icon" href="./assets/images/icon.png"/>
 
 </head>
 
