--- a/syllabus.html
+++ b/syllabus.html
@@ -1,86 +1,96 @@
 <!DOCTYPE HTML>
+<!--
+	Binary by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
+	<head>
+		<title>Spatial Reasoning</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="./assets/css/main.css" />
+		<link rel="icon" href="./assets/images/icon.png" type="image/x-icon"/>
 
-<head>
-	<title>Spatial Reasoning</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/custom.css">
-	<link rel="icon" href="images/icon.png"/>
+	</head>
+	<body>
 
-</head>
+		<!-- Header -->
+			<header id="header">
+				<a href="./index.html" class="logo"><strong>CS1501</strong> Spatial Reasoning</a>
+				<!-- <nav>
+					<a href="#menu">Menu</a>
+				</nav> -->
+			</header>
 
-<body>
+		<!-- Nav -->
+			<!-- <nav id="menu">
+				<ul class="links">
+					<li><a href="../index.html">Home</a></li>
+					<li><a href="generic.html">Generic</a></li>
+					<li><a href="elements.html">Elements</a></li>
+				</ul>
+			</nav> -->
 
-	<!-- Header -->
-	<header id="header">
-		<a href="index.html" class="logo">CS1501 <strong>Spatial Reasoning</strong></a>
-	</header>
+		<!-- Main -->
+		<section id="banner" style="background-color: #1c1c1c;">
+			<div class="inner">
+				<h1>Teaching Staff</h1>
+				<ul class="actions">
+					<li><a href="lessons.html#current" class="button alt scrolly big">Most Recent Lesson</a></li>
+					<li><a href="syllabus.html" class="button alt scrolly big">Syllabus</a></li>
+					<li><a href="staff.html" class="button alt scrolly big">Teaching Staff</a></li>
+				</ul>
 
-	<!-- Banner -->
-	<section id="banner" style="background-color: #1c1c1c;">
-		<div class="inner">
-			<h1>Syllabus</h1>
-			<ul class="actions">
-				<li><a href="lessons.html#current" class="button alt scrolly big">Most Recent Lesson</a></li>
-				<li><a href="syllabus.html" class="button alt scrolly big">Syllabus</a></li>
-				<li><a href="staff.html" class="button alt scrolly big">Teaching Staff</a></li>
-			</ul>
+			</div>
+		</section>
+			<section id="main">
+				<div class="inner">
 
-		</div>
-	</section>
+					<header>
+						<h1 style="color: black;">Syllabus</h1>
+						<p class="info">August 29, 2018 <a href="#">Rohit and Isabel</a></p>
+					</header>
+					<p>
+						<strong>Course Description</strong> <br/>
+						Spatial reasoning skills are strongly correlated with success in computer science, especially that the introductory levels. This is because, in many instances, professors use spatial reasoning terms and ideas while teaching computer science. Thus, many students, who didn’t develop these skills at a younger age, are at a disadvantage. <br/>
+						We have designed this course in conjunction with Professor Tychonievich to help everyone improve their skills!
+					</p>
+					<p>
+						<strong>Pre-Requisites</strong> <br />
+						We have no formal prerequisites, however students who have not completed CS2150 may benefit the most from this course! No computer science skills or knowledge is required to have fun and do well in this class.
+					</p>
+					<p>
+						<strong>Course Instructors</strong> <br/>
+						Rohit Musti - Computer Science Major (rm3qg@virginia.edu) <br />
+						Isabel Alvarez - Computer Science Major (ia2ew@virginia.edu)
+					</p>
+
+					<p>
+						<strong>Grading Policy </strong> <br />
+						Attendance: 50 points<br />
+						Homeworks: 25 points<br />
+						Activities: 25 points<br />
+						If there is any problem fulfilling these grading requirements, please speak to one of the course instructors and we will work students on a case-by-case basis.
+					</p>
 
 
-	<section id="banner" style="background-color: #e57200;">
-		<div class="inner">
-			<h1 style="color: white;">Pre-Requisites</h1>
-			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
-				This class has no formal prerequisites, however students who have not completed CS2150 may benefit the most from this course. No computer science skills or knowledge is required to have fun and do well in this class.
-			</p>
-		</div>
-	</section>
+			</section>
 
-	<section id="banner" style="background-color: #232D4B;">
-		<div class="inner">
-			<h1 style="color: white;">Materials</h1>
-			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
-				There are no required materials to be purchased, and no textbook will be required. Any readings, assignments or other activities will be made available to students on the class website.
-			</p>
-		</div>
-	</section>
+		<!-- Footer -->
+			<footer id="footer">
 
+				<div class="copyright">
+					Design: <a href="https://templated.co">TEMPLATED</a>.
+				</div>
+			</footer>
 
-	<section id="banner" style="background-color: #e57200;">
-		<div class="inner">
-			<h1 style="color: white;">Grading</h1>
-			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
-				The grades for this class will be distributed as follows:
-				</br>
-				Attendance: 50%</br>
-				Homeworks: 25%</br>
-				Activities (in class): 25%</br>
-				The class will use the standard 10-point grading scale.</br>
-				If you have any grading concerns, please reach out to one of the instructors.
-			</p>
-		</div>
-	</section>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-	<!-- Footer -->
-	<footer id="footer">
-
-		<div class="copyright">
-			CS 1501 - Design: <a href="https://templated.co">TEMPLATED</a>
-		</div>
-	</footer>
-
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/skel.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-
-</body>
-
+	</body>
 </html>
