Change page header from Teaching Staff to Syllabus

--- a/syllabus.html
+++ b/syllabus.html
@@ -35,7 +35,7 @@
 		<!-- Main -->
 		<section id="banner" style="background-color: #1c1c1c;">
 			<div class="inner">
-				<h1>Teaching Staff</h1>
+				<h1>Syllabus</h1>
 				<ul class="actions">
 					<li><a href="lessons.html#current" class="button alt scrolly big">Most Recent Lesson</a></li>
 					<li><a href="syllabus.html" class="button alt scrolly big">Syllabus</a></li>
