Broadened the pitch in the first paragraph

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 		<div class="inner">
 			<h1 style="color: white;">Welcome to Spatial Reasoning!</h1>
 			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
-				This is a student-taught class, geared towards students who are interested in computer science or thinking of taking an introductory level class during their time at UVa.</p>
+				Spatial reasoning skills are strongly correlated with success in engineering and computer science, especially that the introductory levels. Sometimes this is due to the spatial nature of the tasks, but more often it is because professors, texts, and peers use diagrams, figures, and spatial terms and ideas to help explain complicated but not intrinsically spatial concepts Thus, many students, who didn’t develop these skills before coming to college, are at a disadvantage.</p>
+			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
+				This is a student-taught class, geared towards students who are interested in computer science or engineering, or thinking of taking a class on a related subject during their time at UVa.</p>
 			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
 				Spatial reasoning skills have been shown to be strongly correlated with success in computer science, especially in the introductory levels. This is because, in many instances, the approach used in teaching computer science concepts involves the use of
 				spatial terms and concepts.</p>
