--- a/syllabus.html
+++ b/syllabus.html
@@ -52,8 +52,8 @@
 						<p class="info">August 29, 2018 <a href="#">Rohit and Isabel</a></p>
 					</header>
 					<p>
-						<strong>Course Description</strong> <br/>
-						Spatial reasoning skills are strongly correlated with success in computer science, especially that the introductory levels. This is because, in many instances, professors use spatial reasoning terms and ideas while teaching computer science. Thus, many students, who didn’t develop these skills at a younger age, are at a disadvantage. <br/>
+						<strong>Course Description</strong> <br/> </br>
+						Spatial reasoning skills are strongly correlated with success in engineering and computer science, especially that the introductory levels. Sometimes this is due to the spatial nature of the tasks, but more often it is because professors, texts, and peers use diagrams, figures, and spatial terms and ideas to help explain complicated but not intrinsically spatial concepts Thus, many students, who didn’t develop these skills before coming to college, are at a disadvantage. <br/>
 						We have designed this course in conjunction with Professor Tychonievich to help everyone improve their skills!
 					</p>
 					<p>
