--- a/syllabus.html
+++ b/syllabus.html
@@ -53,7 +53,7 @@
 					</header>
 					<p>
 						<strong>Course Description</strong> <br/> </br>
-						Spatial reasoning skills are strongly correlated with success in engineering and computer science, especially that the introductory levels. Sometimes this is due to the spatial nature of the tasks, but more often it is because professors, texts, and peers use diagrams, figures, and spatial terms and ideas to help explain complicated but not intrinsically spatial concepts Thus, many students, who didn’t develop these skills before coming to college, are at a disadvantage. <br/>
+						Spatial reasoning skills are strongly correlated with success in engineering and computer science, especially at the introductory levels. Sometimes this is due to the spatial nature of the tasks, but more often it is because professors, texts, and peers use diagrams, figures, and spatial terms and ideas to help explain complicated but not intrinsically spatial concepts. Thus, many students, who didn’t develop these skills before coming to college, are at a disadvantage. <br/>
 						We have designed this course in conjunction with Professor Tychonievich to help everyone improve their skills!
 					</p>
 					<p>
