changing syllabus headers to black font

--- a/syllabus.html
+++ b/syllabus.html
@@ -52,22 +52,22 @@
 						<p class="info">August 29, 2018 <a href="#">Rohit and Isabel</a></p>
 					</header>
 					<p>
-						<strong>Course Description</strong> <br/>
+						<strong style="color: black;">Course Description</strong> <br/>
 						Spatial reasoning skills are strongly correlated with success in engineering and computer science, especially at the introductory levels. Sometimes this is due to the spatial nature of the tasks, but more often it is because professors, texts, and peers use diagrams, figures, and spatial terms and ideas to help explain complicated but not intrinsically spatial concepts. Thus, many students, who didn’t develop these skills before coming to college, are at a disadvantage. <br/>
 						We have designed this course in conjunction with Professor Tychonievich to help everyone improve their skills!
 					</p>
 					<p>
-						<strong>Pre-Requisites</strong> <br />
+						<strong style="color: black;">Pre-Requisites</strong> <br />
 						We have no formal prerequisites, however students who have not completed CS2150 may benefit the most from this course! No computer science skills or knowledge is required to have fun and do well in this class.
 					</p>
 					<p>
-						<strong>Course Instructors</strong> <br/>
+						<strong style="color: black;">Course Instructors</strong> <br/>
 						Rohit Musti - Computer Science Major (rm3qg@virginia.edu) <br />
 						Isabel Alvarez - Computer Science Major (ia2ew@virginia.edu)
 					</p>
 
 					<p>
-						<strong>Grading Policy </strong> <br />
+						<strong style="color: black;">Grading Policy </strong> <br />
 						Attendance: 50 points<br />
 						Homeworks: 25 points<br />
 						Activities: 25 points<br />
