changes to welcome page

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 				Spatial reasoning skills are strongly correlated with success in engineering and computer science, especially at the introductory levels. Sometimes this is due to the spatial nature of the tasks, but more often it is because professors, texts, and peers use diagrams, figures, and spatial terms and ideas to help explain complicated but not intrinsically spatial concepts. Thus, many students, who didn’t develop these skills before coming to college, are at a disadvantage.</p>
 			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
 				This is a student-taught class, geared towards students who are interested in computer science or engineering, or thinking of taking a class on a related subject during their time at UVa.</p>
-			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
+			<!-- <p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
 				Spatial reasoning skills have been shown to be strongly correlated with success in computer science, especially in the introductory levels. This is because, in many instances, the approach used in teaching computer science concepts involves the use of
 				spatial terms and concepts.</p>
 			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
 				Being comfortable with these terms in advance (or even learning them in more depth while taking a class that uses them) has been proved to be of great help to students.</p>
-			</p>
+			</p> -->
 		</div>
 	</section>
 
@@ -87,7 +87,7 @@
 			</p>
 
 			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
-				These activities will include: drawing and sketching; modeling; creating mazes; and even playing video-games!
+				These activities will include: drawing and sketching; modeling; interacting with mazes; and even playing video-games!
 			</p>
 		</div>
 	</section>
