updated isabel's summary

--- a/staff.html
+++ b/staff.html
@@ -64,8 +64,7 @@
 				<h2 style="color: white">Isabel Alvarez</h2>
 				<p style="color: rgba(255, 255, 255, 0.75);">
 					<strong style="color: white">Email: ia2ew@virginia.edu</strong></br>
-					Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+					I am a fourth year computer science student at the School of Engineering. Throughout my academic career, I have had the opportunity to work as an assistant preschool teacher, a college-level tutor, and a teaching assistant at UVa. I have always had an interest for education; and being able to teach this class is an excellent opportunity to help other students learn more about the topic of spatial reasoning.</p>
 			</div>
 		</div>
 	</article>
