--- a/lessons.html
+++ b/lessons.html
@@ -65,7 +65,7 @@
 			</section> -->
 
 	<!-- One -->
-	<article id="current" class="post style1">
+	<article id="one" class="post style1">
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 	</article>
-	<article id="one" class="post style1">
+	<article id="two" class="post style1">
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
@@ -115,7 +115,7 @@
 
 	</article>
 
-	<article id="one" class="post style1">
+	<article id="three" class="post style1">
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
@@ -139,7 +139,7 @@
 			</div>
 		</div>
 	</article>
-	<article id="one" class="post style1">
+	<article id="four" class="post style1">
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
@@ -165,7 +165,7 @@
 
 	</article>
 
-	<article id="one" class="post style1">
+	<article id="five" class="post style1">
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
@@ -189,7 +189,7 @@
 			</div>
 		</div>
 	</article>
-	<article id="one" class="post style1">
+	<article id="six" class="post style1">
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
@@ -214,7 +214,7 @@
 		</div>
 
 	</article>
-	<article id="one" class="post style1">
+	<article id="seven" class="post style1">
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
