--- a/syllabus.html
+++ b/syllabus.html
@@ -5,26 +5,28 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Spatial Reasoning</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="./assets/css/main.css" />
-		<link rel="icon" href="./assets/images/icon.png" type="image/x-icon"/>
 
-	</head>
-	<body>
+<head>
+	<title>Spatial Reasoning</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="./assets/css/main.css" />
+	<link rel="icon" href="./assets/images/icon.png" type="image/x-icon" />
 
-		<!-- Header -->
-			<header id="header">
-				<a href="./index.html" class="logo"><strong>CS1501</strong> Spatial Reasoning</a>
-				<!-- <nav>
+</head>
+
+<body>
+
+	<!-- Header -->
+	<header id="header">
+		<a href="./index.html" class="logo">CS1501 <strong>Spatial Reasoning</strong></a>
+		<!-- <nav>
 					<a href="#menu">Menu</a>
 				</nav> -->
-			</header>
+	</header>
 
-		<!-- Nav -->
-			<!-- <nav id="menu">
+	<!-- Nav -->
+	<!-- <nav id="menu">
 				<ul class="links">
 					<li><a href="../index.html">Home</a></li>
 					<li><a href="generic.html">Generic</a></li>
@@ -32,65 +34,95 @@
 				</ul>
 			</nav> -->
 
-		<!-- Main -->
-		<section id="banner" style="background-color: #1c1c1c;">
-			<div class="inner">
-				<h1>Syllabus</h1>
-				<ul class="actions">
-					<li><a href="lessons.html#current" class="button alt scrolly big">Most Recent Lesson</a></li>
-					<li><a href="syllabus.html" class="button alt scrolly big">Syllabus</a></li>
-					<li><a href="staff.html" class="button alt scrolly big">Teaching Staff</a></li>
-				</ul>
+	<!-- Main -->
+	<section id="banner" style="background-color: #1c1c1c;">
+		<div class="inner">
+			<h1>Syllabus</h1>
+			<ul class="actions">
+				<li><a href="lessons.html#one" class="button alt scrolly big">Most Recent Lesson</a></li>
+				<li><a href="syllabus.html" class="button alt scrolly big">Syllabus</a></li>
+				<li><a href="staff.html" class="button alt scrolly big">Teaching Staff</a></li>
+			</ul>
 
-			</div>
-		</section>
-			<section id="main">
-				<div class="inner">
+		</div>
+	</section>
+	<section id="main">
+		<div class="inner">
 
-					<header>
-						<h1 style="color: black;">Syllabus</h1>
-						<p class="info">August 29, 2018 <a href="#">Rohit and Isabel</a></p>
-					</header>
-					<p>
-						<strong style="color: black;">Course Description</strong> <br/>
-						Spatial reasoning skills are strongly correlated with success in engineering and computer science, especially at the introductory levels. Sometimes this is due to the spatial nature of the tasks, but more often it is because professors, texts, and peers use diagrams, figures, and spatial terms and ideas to help explain complicated but not intrinsically spatial concepts. Thus, many students, who didn’t develop these skills before coming to college, are at a disadvantage. <br/>
-						We have designed this course in conjunction with Professor Tychonievich to help everyone improve their skills!
-					</p>
-					<p>
-						<strong style="color: black;">Pre-Requisites</strong> <br />
-						We have no formal prerequisites, however students who have not completed CS2150 may benefit the most from this course! No computer science skills or knowledge is required to have fun and do well in this class.
-					</p>
-					<p>
-						<strong style="color: black;">Course Instructors</strong> <br/>
-						Rohit Musti - Computer Science Major (rm3qg@virginia.edu) <br />
-						Isabel Alvarez - Computer Science Major (ia2ew@virginia.edu)
-					</p>
+			<header>
+				<h1 style="color: black;">Syllabus</h1>
+				<p class="info">August 29, 2018 <a href="#">Rohit and Isabel</a></p>
+			</header>
+			<p>
+				<strong style="color: black;">Course Description</strong> <br/> Spatial reasoning skills are strongly correlated with success in engineering and computer science, especially at the introductory levels. Sometimes this is due to the spatial nature of
+				the tasks, but more often it is because professors, texts, and peers use diagrams, figures, and spatial terms and ideas to help explain complicated but not intrinsically spatial concepts. Many students, who didn’t develop these skills before coming
+				to college, are at a disadvantage. <br/><br/>This is a student-taught class, geared towards students who are interested in computer science or engineering, or thinking of taking a class on a related subject during their time at UVa.
+			</p>
 
-					<p>
-						<strong style="color: black;">Grading Policy </strong> <br />
-						Attendance: 50 points<br />
-						Homeworks: 25 points<br />
-						Activities: 25 points<br />
-						If there is any problem fulfilling these grading requirements, please speak to one of the course instructors and we will work students on a case-by-case basis.
-					</p>
+			<p>
+				<strong style="color: black;">Course Materials</strong> <br /> Aside from common writing instruments, you will be provided with any other materials you may need. This course does not require a textbook.
+			</p>
 
+			<p>
+				<strong style="color: black;">Pre-Requisites</strong> <br /> We have no formal prerequisites, however students who have not completed CS2150 may benefit the most from this course! No computer science skills or knowledge is required to have fun and
+				do well in this class.
+			</p>
+			<p>
+				<strong style="color: black;">Course Instructors</strong> <br/> Isabel Alvarez - Computer Science Major (ia2ew@virginia.edu)<br /> Rohit Musti - Computer Science Major (rm3qg@virginia.edu)
+			</p>
 
-			</section>
+			<p>
+				<strong style="color: black;">Professor of Contact</strong> <br/> If a student has a significant issue with the course, grades, or instructor, contact the course professor. <br/>Professor Luther Tychonievich <br/>Office: Rice 208 <br/>Email: tychonievich@virginia.edu
+			</p>
 
-		<!-- Footer -->
-			<footer id="footer">
+			<p>
+				<strong style="color: black;">Grading Policy </strong> <br />Participation: 50%<br />Homeworks: 25%<br />Activities: 25%<br /><br/>
+				<u>Participation:</u> Attendance will be taken every class meeting. This is a small class, so we encourage everyone’s active participation. If you need to miss a class, please contact the course instructors.<br/><br/>
+				<u>Homeworks:</u> There will be 5 homework assignments throughout the course. For each assignment, you will have no less than one week to complete your work. If you need help with any of the homeworks, or are unable to complete it on time, please
+				reach out to the course instructors.<br/><br/>
+				<u>Activities:</u> Unlike the homework assignments, these activities will be conducted during class time. You will be graded on your participation rather than on your performance. You will be notified whenever an in-class activity will count towards
+				your grade.<br/> <br/>If there is any problem fulfilling one of these grading requirements, please speak to the course instructors and we will work with students on a case-by-case basis.
+			</p>
 
-				<div class="copyright">
-					Design: <a href="https://templated.co">TEMPLATED</a>.
-				</div>
-			</footer>
+			<p>
+				<strong style="color: black;">SDAC and Other Circumstances</strong> <br/>If you have been identified as an SDAC student, please let the Center know you are taking this class. If you suspect you should be an SDAC student, please schedule an appointment with them for an evaluation. We happily and discretely provide the recommended accommodations for those students identified by the SDAC. Please contact us at least one week before an activity where your accommodations come into play so we can arrange appropriate accommodations. <br/><br/>Website: <a href="http://www.virginia.edu/studenthealth/sdac/sdac.html">http://www.virginia.edu/studenthealth/sdac/sdac.html</a> <br/><br/>If you have other special circumstances (athletics, other university-related activities, health issues, etc.) please let us know as soon as you know these may affect you in class.
+			</p>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<p>
+				<strong style="color: black;">Lesson Topics</strong> <br />
+				<a href="lessons.html#one">Lesson 1: Welcome to Spatial Reasoning!</a> <br/>
+				<a href="lessons.html#one">Lesson 2: Initial Assessment and Sketching I</a> <br/>
+				<a href="lessons.html#two">Lesson 3: Sketching II</a> <br/>
+				<a href="lessons.html#two">Lesson 4: Reflections and Symmetry</a> <br/>
+				<a href="lessons.html#three">Lesson 5: Rotations</a> <br/>
+				<a href="lessons.html#three">Lesson 6: Cross Sections</a> <br/>
+				<a href="lessons.html#four">Lesson 7: Game Day!</a> <br/>
+				<a href="lessons.html#four">Lesson 8: Combining Solids</a> <br/>
+				<a href="lessons.html#five">Lesson 9: Spatial Relations</a> <br/>
+				<a href="lessons.html#five">Lesson 10: Spatial Orientation</a> <br/>
+				<a href="lessons.html#six">Lesson 11: Review</a> <br/>
+				<a href="lessons.html#six">Lesson 12: Survey of Spatial Topics I</a> <br/>
+				<a href="lessons.html#seven">Lesson 13: Survey of Spatial Topics II</a> <br/>
+				<a href="lessons.html#seven">Lesson 14: Final Assessment and Conclusion</a>
+			</p>
 
-	</body>
+	</section>
+
+	<!-- Footer -->
+	<footer id="footer">
+
+		<div class="copyright">
+			Design: <a href="https://templated.co">TEMPLATED</a>.
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
