--- a/lessons.html
+++ b/lessons.html
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/custom.css">
-	<link rel="icon" href="./assets/images/icon.png"/>
+	<link rel="icon" href="./assets/images/icon.png" />
 
 </head>
 
@@ -41,7 +41,7 @@
 		<div class="inner">
 			<h1>Lessons</h1>
 			<ul class="actions">
-				<li><a href="lessons.html#current" class="button alt scrolly big">Most Recent Lesson</a></li>
+				<li><a href="lessons.html#one" class="button alt scrolly big">Most Recent Lesson</a></li>
 				<li><a href="syllabus.html" class="button alt scrolly big">Syllabus</a></li>
 				<li><a href="staff.html" class="button alt scrolly big">Teaching Staff</a></li>
 			</ul>
@@ -69,22 +69,21 @@
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson1.html" style="color: white;">Lesson 1</a></h2>
+					<h2><a href="lessons/lesson1.html" style="color: white;">Lesson 1: Welcome to Spatial Reasoning!</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">August 29, 2018 <a href="#" style="color:#fff">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Welcome to Spatial Reasoning! Today we will go over the syllabus, and discuss the topics we will be covering as well as the structure of the class.</p>
 
 			</div>
 		</div>
 		<div class="content" style="background-color: #232D4B; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson2.html" style="color: white;">Lesson 2</a></h2>
+					<h2><a href="lessons/lesson2.html" style="color: white;">Lesson 2: Assessment and Sketching I</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 5, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Today we will take an initial spatial skills assessment, which will be used as a baseline for your progress throughout the class. We will also begin to cover the topic of sketching. This technique will allow us to communicate to others the representations
+					of the images we mentally visualize. Aside from helping build spatial skills, it is an excellent skill for any student in an engineering field to have.</p>
 
 			</div>
 		</div>
@@ -93,22 +92,22 @@
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson3.html" style="color: white;">Lesson 3</a></h2>
+					<h2><a href="lessons/lesson3.html" style="color: white;">Lesson 3: Sketching II</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 12, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Today we will continue learning about sketching. We will go into more detail regarding the techniques and concepts we learned last class. We will also conduct an in-class activity that will serve as reference for the first homework assignment.</p>
 
 			</div>
 		</div>
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson4.html"  style="color: white;">Lesson 4</a></h2>
+					<h2><a href="lessons/lesson4.html"  style="color: white;">Lesson 4: Reflections and Symmetry</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 19, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Today we will learn to reflect 3D objects across a reflection plane, and to use sketching techniques to represent the result. During the second part of the class, we will cover symmetry and how to identify one or more planes of symmetry given a 3D
+					object.
+				</p>
 
 			</div>
 		</div>
@@ -119,22 +118,22 @@
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson5.html" style="color: white;">Lesson 5</a></h2>
+					<h2><a href="lessons/lesson5.html" style="color: white;">Lesson 5: Rotations</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 26, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Mental rotations are an important spatial skill. Today we will learn to identify the rotation that a given object has been subjected to, and then we will apply that same rotation to a different object; using the sketching techniques we learned to
+					communicate the result.</p>
 
 			</div>
 		</div>
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson6.html" style="color: white;">Lesson 6</a></h2>
+					<h2><a href="lessons/lesson6.html" style="color: white;">Lesson 6: Cross Sections</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 3, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Visualizing and sketching cross sections of objects is an important skill to have in any engineering field, and it also helps improve our spatial reasoning skills. Today we will learn techniques that will help us visualize the cross section of a solid
+					given a certain cutting plane. We will also conduct an in-class activity where we will model objects out of playdough and cut them to verify that our visualization of the cross section was correct.</p>
 
 			</div>
 		</div>
@@ -143,22 +142,21 @@
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson7.html" style="color: white;">Lesson 7</a></h2>
+					<h2><a href="lessons/lesson7.html" style="color: white;">Lesson 7: Game Day!</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 10, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Believe it or not, some video games help improve spatial reasoning skills. Today, we take a break from our busy midterm schedules to explore the positive effects of some of these video games, and even play a few!</p>
 
 			</div>
 		</div>
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson8.html" style="color: white;">Lesson 8</a></h2>
+					<h2><a href="lessons/lesson8.html" style="color: white;">Lesson 8: Combining Solids</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 17, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">So far we have been interacting with one object in space at a time. Now, we will explore what happens when two objects interact with each other. Today we will study the intersection or combination between two solids that overlap, and, as usual, we
+					will sketch the results.</p>
 
 			</div>
 		</div>
@@ -169,22 +167,21 @@
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson9.html" style="color: white;">Lesson 9</a></h2>
+					<h2><a href="lessons/lesson9.html" style="color: white;">Lesson 9: Spatial Relations</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 24, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">To further our study on how objects interact with each other in space, we will work on visualizing the relationship between two objects in space. We will determine if the objects overlap or not, and what their position and orientations are with respect
+					to each other and to a frame of reference.</p>
 
 			</div>
 		</div>
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson10.html" style="color: white;">Lesson 10</a></h2>
+					<h2><a href="lessons/lesson10.html" style="color: white;">Lesson 10: Spatial Orientation</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 31, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Today we will work to improve our ability to determine our own position and orientation within a given environment. This class will be devoted to an interactive activity that will help you to directly apply your skills in this area to solve a problem.</p>
 
 			</div>
 		</div>
@@ -193,22 +190,20 @@
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson11.html" style="color: white;">Lesson 11</a></h2>
+					<h2><a href="lessons/lesson11.html" style="color: white;">Lesson 11: Review</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">November 7, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Today we will summarize all that we have learned during the course, and discuss any topic that may need to be covered in more detail.</p>
 
 			</div>
 		</div>
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson12.html" style="color: white;">Lesson 12</a></h2>
+					<h2><a href="lessons/lesson12.html" style="color: white;">Lesson 12: Survey of Spatial Topics I</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">November 12, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">We have spent all semester improving our spatial reasoning skills. Now, we will look at real-world applications of the subjects we have covered. We will also use our skills to “read” several images and diagrams directly related to engineering fields.</p>
 
 			</div>
 		</div>
@@ -218,22 +213,21 @@
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson13.html" style="color: white;">Lesson 13</a></h2>
+					<h2><a href="lessons/lesson13.html" style="color: white;">Lesson 13: Survey of Spatial Topics II</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">November 19, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">We will continue to explore the real-world applications of the topics we have covered this semester.</p>
 
 			</div>
 		</div>
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson14.html" style="color: white;">Lesson 14</a></h2>
+					<h2><a href="lessons/lesson14.html" style="color: white;">Lesson 14: Assessment and Conclusion</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">November 26, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">The semester has come to an end, but before we say goodbye, you will be asked to take a final spatial skills assessment. We will also ask that you complete a course evaluation in order to improve the class in the future. Your performance on the assessment
+					will not affect your grade, but it will help the instructors determine how much the class has helped you better your skills.</p>
 
 			</div>
 		</div>
