beautified source code

--- a/staff.html
+++ b/staff.html
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/custom.css">
-	<link rel="icon" href="./assets/images/icon.png"/>
+	<link rel="icon" href="./assets/images/icon.png" />
 
 </head>
 
@@ -64,7 +64,8 @@
 				<h2 style="color: white">Isabel Alvarez</h2>
 				<p style="color: rgba(255, 255, 255, 0.75);">
 					<strong style="color: white">Email: ia2ew@virginia.edu</strong></br>
-					I am a fourth year computer science student at the School of Engineering. Throughout my academic career, I have had the opportunity to work as an assistant preschool teacher, a college-level tutor, and a teaching assistant at UVa. I have always had an interest for education; and being able to teach this class is an excellent opportunity to help other students learn more about the topic of spatial reasoning.</p>
+					I am a fourth year computer science student at the School of Engineering. Throughout my academic career, I have had the opportunity to work as an assistant preschool teacher, a college-level tutor, and a teaching assistant at UVa. I have always had an
+					interest for education; and being able to teach this class is an excellent opportunity to help other students learn more about the topic of spatial reasoning.</p>
 			</div>
 		</div>
 	</article>
