--- a/syllabus.html
+++ b/syllabus.html
@@ -85,7 +85,10 @@
 			</p>
 
 			<p>
-				<strong style="color: black;">SDAC and Other Circumstances</strong> <br/>If you have been identified as an SDAC student, please let the Center know you are taking this class. If you suspect you should be an SDAC student, please schedule an appointment with them for an evaluation. We happily and discretely provide the recommended accommodations for those students identified by the SDAC. Please contact us at least one week before an activity where your accommodations come into play so we can arrange appropriate accommodations. <br/><br/>Website: <a href="http://www.virginia.edu/studenthealth/sdac/sdac.html">http://www.virginia.edu/studenthealth/sdac/sdac.html</a> <br/><br/>If you have other special circumstances (athletics, other university-related activities, health issues, etc.) please let us know as soon as you know these may affect you in class.
+				<strong style="color: black;">SDAC and Other Circumstances</strong> <br/>If you have been identified as an SDAC student, please let the Center know you are taking this class. If you suspect you should be an SDAC student, please schedule an appointment
+				with them for an evaluation. We happily and discretely provide the recommended accommodations for those students identified by the SDAC. Please contact us at least one week before an activity where your accommodations come into play so we can arrange
+				appropriate accommodations. <br/><br/>Website: <a href="http://www.virginia.edu/studenthealth/sdac/sdac.html">http://www.virginia.edu/studenthealth/sdac/sdac.html</a> <br/><br/>If you have other special circumstances (athletics, other university-related
+				activities, health issues, etc.) please let us know as soon as you know these may affect you in class.
 			</p>
 
 			<p>
