--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="./assets/css/main.css" />
 	<link rel="stylesheet" href="./assets/css/custom.css">
-	<link rel="icon" href="./assets/images/icon.png"/>
+	<link rel="icon" href="./assets/images/icon.png" />
 
 </head>
 
@@ -54,7 +54,8 @@
 		<div class="inner">
 			<h1 style="color: white;">Welcome to Spatial Reasoning!</h1>
 			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
-				Spatial reasoning skills are strongly correlated with success in engineering and computer science, especially at the introductory levels. Sometimes this is due to the spatial nature of the tasks, but more often it is because professors, texts, and peers use diagrams, figures, and spatial terms and ideas to help explain complicated but not intrinsically spatial concepts. Thus, many students, who didn’t develop these skills before coming to college, are at a disadvantage.</p>
+				Spatial reasoning skills are strongly correlated with success in engineering and computer science, especially at the introductory levels. Sometimes this is due to the spatial nature of the tasks, but more often it is because professors, texts, and peers
+				use diagrams, figures, and spatial terms and ideas to help explain complicated but not intrinsically spatial concepts. Thus, many students, who didn’t develop these skills before coming to college, are at a disadvantage.</p>
 			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
 				This is a student-taught class, geared towards students who are interested in computer science or engineering, or thinking of taking a class on a related subject during their time at UVa.</p>
 			<!-- <p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
