added Rohit bio

--- a/staff.html
+++ b/staff.html
@@ -55,8 +55,7 @@
 				<h2 style="color:white">Rohit Musti</h2>
 				<p style="color: rgba(255, 255, 255, 0.75);">
 					<strong style="color: white">Email: rm3qg@virginia.edu</strong></br>
-					Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque
-					mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+					Hi! My name is Rohit Musti and I am a 3rd year computer science major in the College of Arts and Sciences. I discovered my love for teaching as a TA for CS 1110 and wanted to explore this passion further. Creating this course has been a fantastic step in that direction. Three words to describe me: curious, excitable, and kind. If you have any questions about this course, college, or life in general, don't hesitate to reach out! (also checkout my <a href="https://rohitmusti.github.io" style="color: inherit; text-decoration: underline;"> webiste</a>)
 			</div>
 		</div>
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
