improved home page grammar

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 		<div class="inner">
 			<h2 style="color: white;">What we will learn...</h2>
 			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
-				We have designed this class to be just the right mix of instructive and entertaining. We will meet once a week for one hour, to talk about Spatial Reasoning topics and engage in hands-on activities to enrich our learning.
+				We have designed this class to be both instructive and fun. We will meet once a week for an hour, to discuss Spatial Reasoning topics and engage in hands-on activities. We hope this class is enriching and entertaining.
 			</p>
 			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
-				We will cover topics such as: sketching; object rotations, reflections and symmetry; cross sections of solids; solid combinations; spatial relations; and spatial orientation.
+				We will cover a broad range of topics, including, but not limited to, sketching, object rotations, reflections and symmetry, cross sections of solids, solid combinations, spatial relations, and spatial orientation.
 			</p>
 		</div>
 	</section>
@@ -83,12 +83,12 @@
 		<div class="inner">
 			<h2 style="color: white;">What we will do...</h2>
 			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
-				The best way to learn is to do, so in order to enrich the learning experience, we have prepared several engaging hands-on activities to help students better understand the material. The activities we introduce in class have a connection to spatial reasoning
+				Paul Halmos, a brilliant mathmetician, once said, "The best way to learn is to do". In this spirit, we have prepared several engaging, hands-on activities to ground our lessons in experience. Each activity we have included in our plans directly connect to spatial reasoning
 				concepts, and have been shown to drastically improve spatial skills.
 			</p>
 
 			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
-				These activities will include: drawing and sketching; modeling; interacting with mazes; and even playing video-games!
+				These activities will include drawing, sketching, modeling, interacting with mazes, and even playing video-games!
 			</p>
 		</div>
 	</section>
